--- a/index.html
+++ b/index.html
@@ -4,7 +4,25 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rana</title>
+    <title>Maigo Labs</title>
+
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="半熟迷子工作室" />
+    <meta name="description" content="迷子でもいい、迷子でも進め！ ~ Maigo Labs" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://maigo.dev/" />
+    <meta property="og:title" content="半熟迷子工作室" />
+    <meta property="og:description" content="迷子でもいい、迷子でも進め！ ~ Maigo Labs" />
+    <meta property="og:image" content="https://maigo.dev/images/meta-tags.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://maigo.dev/" />
+    <meta property="twitter:title" content="半熟迷子工作室" />
+    <meta property="twitter:description" content="迷子でもいい、迷子でも進め！ ~ Maigo Labs" />
+    <meta property="twitter:image" content="https://maigo.dev/images/meta-tags.png" />
   </head>
   <body id="app">
   </body>
