--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Maigo Labs</title>
 
@@ -23,6 +22,11 @@
     <meta property="twitter:title" content="半熟迷子工作室" />
     <meta property="twitter:description" content="迷子でもいい、迷子でも進め！ ~ Maigo Labs" />
     <meta property="twitter:image" content="https://maigo.dev/images/meta-tags.png" />
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
   </head>
   <body id="app">
   </body>
